--- a/net7.0/Telia.LinqToGraphQLToModel.Tests/Telia.LinqToGraphQLToModel.Tests.csproj
+++ b/net7.0/Telia.LinqToGraphQLToModel.Tests/Telia.LinqToGraphQLToModel.Tests.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 		<None Remove="GraphqlResponseToModels\Assets\countries-response.txt" />
 		<None Remove="GraphqlResponseToModels\Assets\country-collection-with-countries-response.txt" />
+		<None Remove="GraphqlResponseToModels\Assets\multiple-selections-with-null-and-errors.txt" />
 		<None Remove="LinqToGraphql\Assets\Mutate_Country_Returns_Id.txt" />
 		<None Remove="LinqToGraphql\Assets\Query_Select_Enum_Custom_Serialization.txt" />
 		<None Remove="LinqToGraphql\Assets\Query_Select_Enum_Default_Serialization.txt" />
@@ -23,6 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<EmbeddedResource Include="GraphqlResponseToModels\Assets\multiple-selections-with-null-and-errors.txt" />
 		<EmbeddedResource Include="LinqToGraphql\Assets\Query_Select_Enum_Default_Serialization.txt" />
 		<EmbeddedResource Include="LinqToGraphql\Assets\Query_Select_Enum_Custom_Serialization.txt" />
 	</ItemGroup>
@@ -50,9 +52,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-		<PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
-		<PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+		<PackageReference Include="MSTest.TestAdapter" Version="3.4.3" />
+		<PackageReference Include="MSTest.TestFramework" Version="3.4.3" />
 		<PackageReference Include="coverlet.collector" Version="3.2.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
