--- a/net7.0/Telia.GraphQLSchemaToCSharp.Tests/Telia.GraphQLSchemaToCSharp.Tests.csproj
+++ b/net7.0/Telia.GraphQLSchemaToCSharp.Tests/Telia.GraphQLSchemaToCSharp.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="_LocalTestFiles\Models.graphql" />
+    <None Remove="_LocalTestFiles\ModelsSimple.graphql" />
     <None Remove="_TestFiles\InputType_classes.txt" />
     <None Remove="_TestFiles\InputType_schema.txt" />
     <None Remove="_TestFiles\InterfaceWithImplementation_classes.txt" />
@@ -29,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="_LocalTestFiles\ModelsSimple.graphql" />
     <EmbeddedResource Include="_LocalTestFiles\Models.graphql" />
     <EmbeddedResource Include="_TestFiles\InputType_classes.txt" />
     <EmbeddedResource Include="_TestFiles\InputType_schema.txt" />
@@ -49,14 +51,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.4.3" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.4.3" />
     <PackageReference Include="coverlet.collector" Version="3.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SystemLibrary.Common.Net" Version="6.6.1.4" />
+    <PackageReference Include="SystemLibrary.Common.Net" Version="7.6.0.4" />
   </ItemGroup>
 
   <ItemGroup>
